Collisions now work. CollidableObject is now no longer a seperate class.